<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/background" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/slackey"
        android:gravity="center_horizontal"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:text="@string/app_title"
        android:textColor="@color/black"
        android:textSize="40dp"></TextView>

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/tvTitle"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/slackey"
        android:text="@string/menu_play"
        android:textSize="20dp"></Button>

    <Button
        android:id="@+id/btnRanking"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/btnPlay"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/slackey"
        android:text="@string/menu_ranking"
        android:textSize="20dp"></Button>

    <Button
        android:id="@+id/btnRecords"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/btnRanking"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/slackey"
        android:text="@string/menu_records"
        android:textSize="20dp"></Button>

    <Button
        android:id="@+id/btnClose"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/btnRecords"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/slackey"
        android:text="@string/menu_close"
        android:textSize="20dp"></Button>



</RelativeLayout>
